<resources>
    <string name="app_name">风生水</string>
    <string name="app_home">首页</string>
    <string name="life">命理</string>
    <string name="study">学堂</string>
    <string name="me">我的</string>
    <string name="shop">商城</string>
    <string name="test1">测试</string>
    <string name="txt_weather_chuanyi">穿衣</string>
    <string name="txt_weather_chenlian">晨练</string>
    <string name="txt_weather_xiche">洗车</string>
    <string name="txt_weather_ganmao">旅游</string>
    <string name="txt_weather_wuran">空调</string>
    <string name="txt_weather_ziwaixian">紫外线</string>
    <string name="txt_alarm_look">打开风生水</string>
    <string name="txt_alarm_cancel">朕知道了</string>
    <string name="txt_no_fortune">该星座今日暂无运势</string>
    <string name="home_pinglun">全部评论</string>
    <string name="zeri_app_introduction">传统黄历择日，选择适合您做事的吉祥日子，做事必定事事顺利。</string>
    <string name="zeri_app_name">择日</string>
    <string name="zeri_chaxun_shixiang">查询事项：</string>
    <string name="zeri_chaxun_shixiang_yiji">宜忌：</string>
    <string name="zeri_chaxun_shixiang_message">请您选择查询的事项</string>
    <string name="zeri_chaxun_zhouqi">查询周期：</string>
    <string name="zeri_chaxun_zhouqi_message">请您选择查询的周期</string>
    <string name="zeri_duichong">对冲：</string>
    <string name="zeri_gongli">公历：</string>
    <string name="zeri_ji">忌</string>
    <string name="zeri_jihui">忌讳：</string>
    <string name="zeri_jiri_chaxun">吉日查詢</string>
    <string name="zeri_kaishi_chaxun">开始查询</string>
    <string name="zeri_kaishi_riqi">开始日期：</string>
    <string name="zeri_kaishi_riqi_message">请您选择开始的日期</string>
    <string name="zeri_nongli">农历：</string>
    <string name="zeri_shiyi">适宜：</string>
    <string name="zeri_taishen">胎神：</string>
    <string name="zeri_tishi_of_input">亲，您尚未输入输入完毕！</string>
    <string name="zeri_yi">宜</string>
    <string name="txt_hot_mearure">热门测算</string>
    <string name="txt_tuijian_mearure">推荐测算</string>
    <string name="txt_recommend">大师推荐</string>
    <string name="txt_release">放生池</string>
    <string name="txt_more">更多</string>
    <string name="txt_user_name">某某</string>
    <string name="txt_shenqing_dashi">申请成为大师</string>
    <string name="txt_mine_dingdan">我的订单</string>
    <string name="txt_mine_jifen">积分活动</string>
    <string name="txt_mine_xiaoxi">我的消息</string>
    <string name="txt_mine_jiangpin">奖品与优惠券</string>
    <string name="txt_mine_kaiyun">开运商城</string>
    <string name="txt_mine_cart">购物车</string>
    <string name="txt_mine_kefu">联系客服</string>
    <string name="txt_mine_setting">设置</string>
    <string name="txt_feed_back">欢迎你反馈使用产品的感受和建议</string>
    <string name="txt_submit">提交</string>
    <string name="txt_share_msg">专业风水命理测算：日历、黄历、紫薇命盘、八字算命、起名、风水、放生、供奉、许愿，大师测算。</string>
    <string name="txt_share_bzpp">我的八字排盘出来了，分析得很准确，大家快来测测.....</string>
    <string name="txt_share_zwmp">我的紫微命盘出来了，分析得很准确，大家快来测测.....</string>
    <string name="txt_qifutai_gotologin">登录你的账号即可祈福上香、获得积分奖励和多重好礼优惠，保障你的记录不再丢失。</string>
    <string name="txt_qifutai_gotologinv2">获取大仙数据出问题 请重新登录</string>
    <string name="txt_head">头像</string>
    <string name="txt_nickname">我的昵称</string>
    <string name="txt_binding_phone">绑定电话</string>
    <string name="txt_birthday">我的生日</string>
    <string name="txt_gender">我的性别</string>
    <string name="txt_working_condition">工作状况</string>
    <string name="txt_marital_status">婚姻状况</string>
    <string name="txt_exit">退出登录</string>
    <string name="txt_classroom_specia">专栏推荐</string>
    <string name="txt_classroom_course">课程推荐</string>
    <string name="txt_classroom_zhouyi">周易知识</string>
    <string name="txt_classroom_circle">共修圈子</string>
    <string name="txt_classroom_master">大师亲算</string>
    <string name="txt_classroom_fengshui">风水推荐</string>
    <string name="txt_classroom_more">更多</string>
    <string name="txt_classroom_shop">商城</string>
    <string name="txt_classroom_newmsg">最新资讯</string>
    <string name="news_title">最新资讯</string>
    <string name="zhouyi_title">周易知识</string>
    <string name="txt_master">供奉大仙</string>
    <string name="txt_course">祈福历程</string>
    <string name="txt_shopping_mall">祈福商城</string>
    <string name="txt_flower">花代表因，代表修德。供花是给人们自己看的，提醒人们平时一定要注意修德。花开了以后，才会结果，花开得好，果才能结得好。因此，只有常修善因，将来才能够得到好的果报。</string>
    <string name="txt_fruit">表示成果。果不是供给诸天上圣吃的，是教我们看到果时，就能想起“希望得到什么样的果报，就应该要修什么样的因”。万事有因才有果，果代表圆满，是圆满功德之果。</string>
    <string name="txt_deng">灯代表光明，凡是光明都表示智慧，所以我们看见一切光明的时候，就要想到应向智慧的路上走。</string>
    <string name="txt_xiang">香代表信香，是一种信号，用来跟诸天上圣传递信息、感应的。经书有云：仙境难通以香为信。古时候，信息不发达，用烽火来传递消息，信香也是取这个意思。玄门上香文讲：妙洞真香、灵宝慧香超三界香，三柱真香腾空供养，上界云府高真,中界岳渎威灵,下界水府仙官等三界诸神，香云达信。当我们看到香烟、闻到香味，就应想 到自己要修道、养德、定慧。</string>
    <string name="txt_water">水代表心境。水很纯凈，代表心要清凈。水不起波浪是平的，代表平等。所以供养这杯清水，看到它就想到我们的心也要像水一样清凈、平等。这是供具里面最最重要的，你甚至可以不烧香、不点蜡烛，也没有鲜花和水果，但是不能不供养一杯清水，看到水就要想到自己在一切境缘当中，世界的各种环境中，要知道修清凈心、平等心。</string>
    <string name="txt_table">供桌，祭祀时摆放供品的桌子。常见于大型的祭祀活动，庙宇、祠堂、家宅、公司等摆放祖宗牌位，佛道神灵的地方，用来放置香烛贡品之用，不管在日常的普通祭祀中，还是在大型的公祭，族祭中，都是神圣不可侵犯之处。</string>
    <string name="txt_screen">屏风在三千年前的周就以天子专用器具出现，是名位和权力的象征，与风水中一直强调的“后有靠”是一致的。就风水的角度而言，屏风具有挡煞，纳福，聚气，隐蔽、靠山等作用，而屏风上吉祥的图案还可以提升主人的运势和素养等。</string>
    <string name="txt_wish">祈福许愿需心诚方灵，许愿内容应填写自己的真实所求，以呈递神明，如有反国家、反社会或其他不端正的言论，请述无法为您祈福</string>
    <string name="qifu_gongping_guidedialog_text1">正确的供奉顺序:</string>
    <string name="qifu_gongping_guidedialog_text2">摆放供奉仙像的花。花代表因，代表修德。</string>
    <string name="qifu_gongping_guidedialog_text3">摆放供奉仙像的果。果表示成果，万事有因才有果。</string>
    <string name="qifu_gongping_guidedialog_text4">上香。香代表信香，是一种信号，用来跟诸天上圣传递信息、感应的。</string>
    <string name="qifu_gongping_guidedialog_text5">供奉鲜花</string>
    <string name="qifu_gongping_guidedialog_text6">供奉水果</string>
    <string name="txt_life">本栏目主要对家居风水、喜事择日和生活中围绕身边的事物进行凶吉预测</string>
    <string name="txt_qfzy">本栏目是大师推荐的开运方法，如果您对自身的运势不满意，可以通过下列的方法来提升自身运势</string>
    <string name="txt_marrage_love">本栏目主要分析感情婚姻方面的问题，了解哪类异性适合自己，婚后生活情况等</string>
    <string name="txt_divination">本栏目收集各种传统签补，想要知道事情的吉凶结果，求签卜卦是最快捷的方法</string>
    <string name="txt_nametest">本栏目是分析名字对自身的影响，可以为自己或宝宝起一个吉祥的名字来改善命运</string>
    <string name="txt_qx_null">您还没有填写愿望内容，请先填写愿望内容！</string>
    <string name="txt_qx_sure">请确认您的真实心愿内容，向神明祈福也不可以当儿戏！</string>
    <string name="fy_dade_qing">请符</string>
    <string name="lf_dasi">\t\t风生水所有大德圣品均在佛教圣地虔诚开光加持，瞻礼、礼敬、供养、赞叹、诵经。经过佛教圣地正规开光加持的圣品，诸邪魔皆不敢接近，并有极强的灵性，可帮助敬奉佩戴者修慧修福，清净内心，开运改运，镇妖避邪，逢凶化吉，从而获得帮助改善生活、事业、财运、爱情、精神等一系列善果。</string>
    <string name="txt_skip">跳过</string>
    <string name="txt_to_login">老用户登录</string>
    <string name="txt_register">马上注册</string>
    <string name="txt_login">确定登录</string>
    <string name="txt_sure_register">确定注册</string>
    <string name="txt_phonenumber">手机号</string>
    <string name="txt_pwd">密码</string>
    <string name="txt_kaiguagn">开光又叫点眼和入神，它的意义在于使符咒具有更好的灵力，开光能进一步强化符咒的灵力，加强符与请符人的联结，效果更加明显。没有开光的符咒就像被蒙上了一层隔膜，难与请符人有太大的感应。所以符咒开光以后更能使得缘主的虔诚愿望得以早日实现。</string>
    <string name="txt_jiachi">随著时间的流逝，符的灵力也会慢慢消退，这时候通过加持符咒可以再次为符咒注入灵力。即使没有经过时间的沉淀也可以加持符咒，这样不仅能使符咒的灵力更加显著，也能使缘主与符咒的连结加深。</string>
    <string name="txt_qianming_notice">我们采用高级加密技术，并遵守隐私法例，保证您的隐私资料不被泄露。在符咒上写上用符者的姓名、生庚、地址可加强人与符的连结，符咒灵力更加强劲。您也可以选择不填写任何资料，或者只填写其中的一项。</string>
    <string name="txt_qianming_notice_2">填写个人资料是为了让符咒与您的结合更加紧密，从而使得符咒能发挥它的最大功效，帮助您解决问题。请问您是否确定要取消填写资料？</string>
    <string name="txt_qianming_notice_3">确定后不能再修改，请确保输入的资讯是准确的</string>
    <string name="txt_qianming_username">用符者&#160;</string>
    <string name="txt_qianming_shenggeng">生庚&#160;</string>
    <string name="txt_qianming_address">地址&#160;</string>
    <string name="txt_dade_login">登录您的账号即可求符保平安,并获得积分奖励和多重好礼优惠,保障您请的符从此不再丢失。</string>
    <string name="chuantong_ziwei_title">紫微斗数</string>
    <string name="chuantong_ziwei_content">2016财运分析、爱情事业</string>
    <string name="chuantong_ziwei_fenxi">查看分析</string>
    <string name="chuantong_chengu_title">称骨论命</string>
    <string name="chuantong_chengu_content">唐代著名的星象预测家袁天罡</string>
    <string name="start_cesuan">开始测算</string>
    <string name="chengu_describ">\t\t\t称骨算命是唐代著名的星象预测家袁天罡称骨的预测方法，和生辰八字算命、紫微斗数算命异曲同工，略有不同，虽然都是用出生的时间算命，但比较而言，称骨算命将命运的比较粗略，只是把命运分为五十一种，故对命运的考察不细致，不太准确，可以供求测者参考。</string>
    <string name="man">男：</string>
    <string name="femal">女：</string>
    <string name="chuantong_bazi_title">八字排盘</string>
    <string name="txt_lighe_lable">点灯招好运，许愿保平安</string>
    <string name="txt_light_type">许愿灯类别：</string>
    <string name="txt_input_message">请输入信息</string>
    <string name="txt_light_name">点灯者</string>
    <string name="txt_input_name">请输入姓名</string>
    <string name="txt_sex">性别</string>
    <string name="txt_man">男</string>
    <string name="txt_woman">女</string>
    <string name="txt_date">出生日期</string>
    <string name="txt_input_date">请选择出生日期</string>
    <string name="txt_input_wish">请输入心中愿望(140字左右)</string>
    <string name="txt_ispublic">选择是否公开：</string>
    <string name="txt_public">公开</string>
    <string name="txt_not_public">不公开</string>
    <string name="txt_public_desc">公开显示后将显示愿望至许愿灯广场，让更多有缘人为您祈福</string>
    <string name="txt_light_deadline">请选择点灯期限：</string>
    <string name="txt_light_confirm">确定点灯</string>
    <string name="txt_90_day">90天—¥30.0</string>
    <string name="txt_180_day">180天—¥48.00</string>
    <string name="txt_remind">贴心提醒：除了帮自己点灯，也别忘了帮亲朋好友一起点灯</string>
    <string name="jifen_text_title1">什么是大师积分</string>
    <string name="jifen_text_content1">每一位使用风生水的粉丝，只要登陆平台，就能成功加入风生水的积分系统啦！每天登陆会给你增加积分哦！</string>
    <string name="jifen_text_title2">积分的使用</string>
    <string name="jifen_text_content2">积分可用于兑换祈福台贡品、积分商城的商品、以及参与风生水平台活动</string>
    <string name="jifen_text_title3">积分的使用</string>
    <string name="jifen_text_content3">风生水平台将对恶意刷大师积分的用户做如下处理: 第一次作弊: 没收所有大师积分,并将用户列入重点监控名单 第二次作弊: 没收所有大师积分,并永久封号,不接收任何形式的申诉</string>
    <string name="free_pool_intro1">
        一、放生就是救命，放生就是救护那些被擒、被抓、将被宰杀、命在垂危的众生的命，而众生最宝贵的就是自己的生命得以重拾生机，救他们的命，他们感激最深，所以功德至大！
        \n\n二、放生就是还债，人们今生及累劫以来所造的杀业早已无量无边，放生就是出钱、出力来救赎众生的性命，以偿还以前人们所积欠无数的杀债。
        \n\n三、放生就是救急，放生与其他的功德不一样，是救命在旦夕，随时将被宰杀的生命得以重拾生机，是千钩一发、刻不容缓的行动，就好像是医院的急诊急救一般，一个刹那、一全行动便可挽救成千上万无数的生命，所以功德至深。
    </string>
    <string name="free_pool_intro2">
        \n\n四、放生就是慈悲，佛心就是大慈悲心，慈悲心是学佛的根本，而放生则是为了解除众生的苦难，起慈悲心予以救赎的一种行为。放生可以长养我们的慈悲心，在放生的过程中，慈悲心获得最大的培养。常常放生，慈悲心常常滋长，与佛心更相契，与佛更容易感应道交，学佛道业更容易成就。
        \n\n五、放生就是觉悟，任何一个众生的佛性与我相比毫无或缺，无二无别，因而每一个生命都是平等珍贵的。在放生中让我们觉悟到众生皆知贪生怕死，皆知趋吉避凶，皆有喜怒哀乐，与我相比，完全相同；众生更皆具备真如佛性，一旦业尽情空，未来皆能成佛，所以救一众生如同救一佛子，更等于救一未来佛。
        \n\n六、放生就是实践，与其空口说得万言，不如老实行得一字，学佛最重要的就是实践。在放生真实的行动中，真正去培养慈悲，真正去解救生命，真正去为众生皈依、念佛、忏悔、回向，真正去体会众生平等一如、皆具佛性、皆能成佛的道理，真正做到自利利他，这样的修行才能真正得到利益。
        \n\n七、放生就是积极，吃素与放生是学佛人行持上极重要的二件事。但吃素只是止恶。是消极地不再造杀业，不再积欠新的杀债；而放生却是扬善，是积极地救赎生命，偿还以前所欠的杀债。吃素而不放生，以前欠的杀业还是有果报的；放生而不吃素，所修得的功德又因为吃肉杀生都赔光了。所以吃素放生是一体的二面，需要相辅相成的，同时并行，效果才会显著。
    </string>
    <string name="free_pool_intro3">
        \n\n八、放生就是方便，当天放生，当天无数身陷牢笼的众生马上获得了自由，无数濒临死亡的生命马上重拾了生机，无限的功德当天马上可以获得。并且不管一人多人、钱少钱多、任何时间、任何地点，只要发慈悲心，任何人都可以进行放生。放生不像其他功德，不需要等待机缘，自己可以主动进行；不需要依赖别人，自己可以独立完成；千千万万人一生中做不到的功德，我们可以经由放生短短的时间内独自一人完全成就，若更能以此广为提倡，功德更加不可思议，所以放生功德最为第一，非其他小善所能比！
        \n\n九、放生就是改命，今生的命运遭遇是因为多生以来所造就无数的善恶因缘所呈现的一个结果，造善因就得善果，造恶因就得恶果。但未来的命运却完全掌握在人们自己的手中。通过积福行善，诚心忏悔，人们的命运可以完全改变过来。而放生的功德最大，既直接又快速，改变命运的力量最为显著。
        \n\n十、放生就是解冤，每一个众生在多生累劫以来，都曾经与人们结过冤仇，冤仇既结，怀恨在心，必当伺机报复。而放生正可以解冤释结，化敌为友，避免彼此的冤冤相报！
    </string>
    <string name="free_pool_intro4">
        \n\n十一、放生就是消灾，灾难不幸之所以发生，都是源于人们以前所结的冤业、所造的杀业而来。放生解救众生的命，免除了众生的死难，也同时消除了我们的宿业，免除了未来原本应该偿受不幸的业报，这是因果必然的道理。
        \n\n十二、放生就是治病，其实疾病绝症之所以发生，就是因为以前我们杀生所感召的杀业而来。既造杀因必结杀果，既造成杀业必受杀报，解决之道就是放生，偿还杀债，消除了疾病根本的杀因，病苦自然好转。
        \n\n十三、放生就是救亲，每一个众生在无始的轮回中，都曾与我们互为父母、子女、手足、亲眷，只因彼此业缘不同，今朝我幸而为人，彼不幸沦为畜牲，放生就是救拔我们累世以来的亲友眷属，使其重拾生机，安享天年！
    </string>
    <string name="free_pool_intro5">
        \n\n十四、放生就是延寿，每个人都希望长寿，放生救赎生命，延长了无数众生的生命。也必然同时延长了自己的寿命，这是因果永恒不变的真理。
        \n\n十五、放生就是福善，救人一命胜造七级浮屠，而每一条生命都是平等珍贵的，所以救一众生，功德已无量无边，更何况救众多生命！放生就是积最大的福！放生就是行最大的善；积福行善，所有功德，莫过放生！
        \n\n十六、放生能助生西，放生三施俱全，财布施、法布施、无畏布施，放生一举尽得。修行人以念佛（念佛—忆念觉悟的意思）为主，放生为辅，如此修行，如顺风之帆、顺水之舟，用力少而成效多，以此无上殊胜的功德回向往生西方极乐世界，往生大业必能稳操胜券，高登西方九品莲台必是指日可待。
    </string>
</resources>