<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/txt_lighe_lable"
                android:textSize="@dimen/textSize_l"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="@dimen/px10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_title_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_light_type"
                    android:textColor="@color/red_light"
                    android:textSize="@dimen/textSize_l"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:id="@+id/tv_light_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_title_type"
                    android:layout_alignTop="@id/tv_title_type"
                    android:textSize="@dimen/textSize_l"
                    android:textColor="@color/red_text"/>
                <ImageView
                    android:id="@+id/iv_light_type"
                    android:layout_width="@dimen/px210dp"
                    android:layout_height="@dimen/px210dp"
                    android:src="@drawable/xuyuandeng_icon_01_normal"
                    android:layout_below="@id/tv_title_type"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/px40dp"/>
            </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_remind"
                    android:background="@color/xuyuang_bg"
                    android:layout_below="@id/iv_light_type"
                    android:layout_marginTop="@dimen/px30dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_input_message"
                    android:textSize="@dimen/textSize_m"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="@dimen/px24dp"
                    android:layout_marginTop="@dimen/px30dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px30dp"
                android:background="@drawable/xuyuandeng_bg_biankuang"
                android:layout_marginLeft="@dimen/px24dp"
                android:layout_marginRight="@dimen/px24dp">
                <LinearLayout
                    android:id="@+id/ll_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px80dp">
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_light_name"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_m"/>
                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_input_name"
                        android:textColor="@color/middle_gray_text"
                        android:textSize="@dimen/textSize_m"
                        android:layout_marginLeft="@dimen/px20dp"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px1dp"
                    android:layout_below="@id/ll_name"/>
                <LinearLayout
                    android:id="@+id/ll_sex"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px80dp"
                    android:layout_below="@id/ll_name">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/txt_sex"
                        android:textSize="@dimen/textSize_m"
                        android:layout_gravity="center"/>
                    <RadioGroup
                        android:id="@+id/rg_choose_sex"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginLeft="@dimen/px50dp"
                        android:gravity="center_vertical">
                        <RadioButton
                            android:id="@+id/rb_boy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_man"
                            android:textSize="@dimen/textSize_m"
                            android:checked="true"/>
                        <RadioButton
                            android:id="@+id/rb_girl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_woman"
                            android:textSize="@dimen/textSize_m"/>
                    </RadioGroup>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px1dp"
                    android:layout_below="@id/ll_sex"/>
                <LinearLayout
                    android:id="@+id/ll_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px80dp"
                    android:layout_below="@id/ll_sex">
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_date"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_m"/>
                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_input_date"
                        android:textColor="@color/middle_gray_text"
                        android:textSize="@dimen/textSize_m"
                        android:layout_marginLeft="@dimen/px20dp"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px1dp"
                    android:layout_below="@id/ll_date"/>
                <EditText
                    android:id="@+id/et_wish"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px250dp"
                    android:layout_below="@id/ll_date"
                    android:hint="@string/txt_input_wish"
                    android:textSize="@dimen/textSize_m"
                    android:textColor="@color/middle_gray_text"
                    android:background="@color/xuyuang_bg"
                    android:paddingLeft="@dimen/px20dp"
                    android:paddingTop="@dimen/px20dp"
                    android:layout_marginTop="@dimen/px20dp"
                    android:gravity="left"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/choose_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ispublic"
                android:textSize="@dimen/textSize_m"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_marginLeft="@dimen/px24dp"
                android:layout_marginTop="@dimen/px40dp"/>
            <RadioGroup
                android:id="@+id/rg_choose_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/px30dp"
                android:layout_marginLeft="@dimen/px40dp"
                android:layout_marginRight="@dimen/px40dp">
                <RadioButton
                    android:id="@+id/rb_public"
                    android:layout_width="@dimen/px0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_public"
                    android:textSize="@dimen/textSize_m"/>
                <RadioButton
                    android:id="@+id/rb_not_public"
                    android:layout_width="@dimen/px0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_not_public"
                    android:textSize="@dimen/textSize_m"
                    android:checked="true"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_public_desc"
                android:textColor="@color/middle_gray_text"
                android:layout_marginLeft="@dimen/px24dp"
                android:layout_marginRight="@dimen/px24dp"/>
            <TextView
                android:id="@+id/choose_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_light_deadline"
                android:textSize="@dimen/textSize_m"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_marginLeft="@dimen/px24dp"
                android:layout_marginTop="@dimen/px40dp"/>
            <RadioGroup
                android:id="@+id/rg_choose_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/px30dp"
                android:layout_marginLeft="@dimen/px40dp"
                android:layout_marginRight="@dimen/px40dp"
                >
                <RadioButton
                    android:id="@+id/rb_money1"
                    android:layout_width="@dimen/px0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_90_day"/>
                <RadioButton
                    android:id="@+id/rb_money2"
                    android:layout_width="@dimen/px0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_180_day"
                    android:checked="true"/>
            </RadioGroup>
            <Button
                android:id="@+id/btn_light_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px80dp"
                android:text="@string/txt_light_confirm"
                android:textSize="@dimen/textSize_l"
                android:textColor="@color/white"
                android:layout_below="@id/rg_choose_deadline"
                android:layout_marginTop="@dimen/px40dp"
                android:layout_marginBottom="@dimen/px40dp"
                android:layout_marginLeft="@dimen/px24dp"
                android:layout_marginRight="@dimen/px24dp"
                android:background="@drawable/selector_btn_touch"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>