<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:weightSum="1">
    <LinearLayout
        android:background="@drawable/shape_white"
        android:orientation="vertical"
        android:layout_width="241dp"
        android:padding="15dp"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/lingji_score_tips"
                android:drawablePadding="10dp"
                android:text="@string/jifen_text_title1"/>

            <TextView
                android:layout_marginTop="@dimen/px20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/jifen_text_content1"
                />

            <!--<InputView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2px"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:background="@color/gray"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/lingji_score_tips"
                android:drawablePadding="10dp"
                android:text="@string/jifen_text_title2"/>

            <TextView
                android:layout_marginTop="@dimen/px20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
               android:text="@string/jifen_text_content2"/>

            <!--<InputView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2px"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:background="@color/gray"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/lingji_score_tips"
                android:drawablePadding="10dp"
                android:text="@string/jifen_text_title3"/>

            <TextView
                android:layout_marginTop="@dimen/px20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/jifen_text_content3"/>

            <!--<InputView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2px"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:background="@color/gray"/>-->
        </LinearLayout>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_cancel"
            android:layout_gravity="center_horizontal"
            android:layout_width="144dp"
            android:text="确定"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/selector_credits_intro_btn_bg"
            android:layout_height="wrap_content"/>
        </LinearLayout>
</LinearLayout>